# quoil

./: CMakeLists.txt  README.md  flake.nix  run-quoil.sh  shell.qml
components/: AnchorAnim.qml  Anim.qml  CAnim.qml  MaterialIcon.qml  StateLayer.qml  StyledText.qml
components/containers/: StyledWindow.qml
components/controls/: ButtonBase.qml  CircularIndicator.qml  CircularProgress.qml  CustomSpinBox.qml  FilledSlider.qml  IconButton.qml  IconTextButton.qml  M3TextField.qml  Menu.qml  SplitButton.qml  StyledProgressBar.qml  StyledRadioButton.qml  StyledScrollBar.qml  StyledSlider.qml  StyledSwitch.qml  StyledTextField.qml  TextButton.qml  Tooltip.qml
components/effects/: ColouredIcon.qml
components/filedialog/: CurrentItem.qml  DialogButtons.qml  FolderContents.qml  HeaderBar.qml  Sidebar.qml
components/images/: CachingImage.qml
components/widgets/: CoverArt.qml  ExtraIndicator.qml
docs/: ARCHITECTURE.md
modules/: BatteryMonitor.qml  ConfigToasts.qml  IdleMonitors.qml  Shortcuts.qml
modules/areapicker/: Picker.qml
modules/background/: Background.qml  DesktopClock.qml  Visualiser.qml  Wallpaper.qml
modules/bar/: Bar.qml  BarWrapper.qml
modules/dashboard/: Content.qml  Dash.qml  Media.qml  Performance.qml  Tabs.qml  WeatherTab.qml  Wrapper.qml
modules/drawers/: ContentWindow.qml  Exclusions.qml  Interactions.qml  Panels.qml  Regions.qml
modules/launcher/: AppList.qml  Content.qml  ContentList.qml  WallpaperList.qml  Wrapper.qml
modules/lock/: Center.qml  Content.qml  Fetch.qml  LockSurface.qml  Media.qml  NotifDock.qml  NotifGroup.qml  Pam.qml  Resources.qml  WeatherInfo.qml
modules/nexus/: NavPane.qml  Nexus.qml  PageCompRegistry.qml  (+2 more)
scripts/: qml-lint-conventions.py  quoil
services/: Audio.qml  Brightness.qml  Colours.qml  GameMode.qml  Hypr.qml  NetworkUsage.qml  NotifData.qml  Notifs.qml  Players.qml  Recorder.qml  Screens.qml  Time.qml  VPN.qml  Wallpapers.qml  Weather.qml
utils/: Icons.qml  Paths.qml  SysInfo.qml
(+139 files in other folders)
